--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -21,7 +21,7 @@ jobs:
         run: gem update --system 3.3.22
 
       - name: Install Bundler
-        run: gem install bundler
+        run: gem install bundler -v "~> 2.5"
 
       - name: Install dependencies
         run: bundle install
